Fix left-alignment issue with nav bar user button on small screen width

--- a/frontend/src/sass/components/_Nav.scss
+++ b/frontend/src/sass/components/_Nav.scss
@@ -36,6 +36,10 @@
     @media only screen and (max-width: 992px) {
       gap: 1rem;
     }
+
+    .button {
+      margin-left: auto;
+    }
   }
 
   &__link {
